--- a/index.html
+++ b/index.html
@@ -182,6 +182,12 @@
     </div>
   </div>
 
+    <!-- Page 4 -->
+    <div id="page4" class="form-page">
+      <h2>🎉 Thank You!</h2>
+      <p>Your feedback has been submitted for all faculties.</p>
+    </div>
+
   <!-- Loader -->
   <div id="loader">
     <div class="spinner"></div>
@@ -405,4 +411,5 @@ document.addEventListener("DOMContentLoaded", () => showPage(1));
 </script>
 </body>
 </html>
+
 
