--- a/index.html
+++ b/index.html
@@ -70,17 +70,13 @@
       margin: 8px 8px 0 0;
       transition: all 0.3s;
     }
-    .btn:hover {
-      background: #1558b0;
-    }
+    .btn:hover { background: #1558b0; }
     .form-page { display: none; }
     .active-page { display: block; }
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(15px); }
       to { opacity: 1; transform: translateY(0); }
     }
-
-    /* Question block like Google Form */
     .question-block {
       background: #f8f9fa;
       border: 1px solid #dadce0;
@@ -88,12 +84,7 @@
       padding: 15px 18px;
       margin-bottom: 18px;
     }
-    .question-block label {
-      margin-bottom: 8px;
-      font-weight: 500;
-    }
-
-    /* Loader */
+    .question-block label { margin-bottom: 8px; font-weight: 500; }
     #loader {
       display: none;
       position: fixed;
@@ -112,10 +103,7 @@
       height: 60px;
       animation: spin 1s linear infinite;
     }
-    @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
-    }
+    @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
   </style>
 </head>
 <body>
@@ -128,16 +116,12 @@
         <h2>Basic Information</h2>
         <label>Student Name *</label>
         <input id="studentName" type="text" placeholder="Your full name">
-
         <label>Registration Number *</label>
         <input id="regNumber" type="text" placeholder="e.g. CRO1234567">
-
         <label>Email *</label>
         <input id="email" type="email" placeholder="example@email.com">
-
         <label>Mobile Number *</label>
         <input id="mobile" type="tel" placeholder="10 digit number"> 
-
         <button type="button" class="btn" onclick="validatePage1()">Next →</button>
       </div>
 
@@ -157,24 +141,19 @@
           <label>Batch ID *</label>
           <input id="batchId" type="text">
         </div>
-
         <div id="questionsContainer"></div>
-
         <div class="question-block">
           <label>Quiz Marks *</label>
           <input id="quizMarks" type="number" min="0" max="100" oninput="calculateScore()">
         </div>
-
         <div class="question-block">
           <p><b>Weightage Score:</b> <span id="weightageScore">0.00</span></p>
           <p><b>Grade:</b> <span id="grade">-</span></p>
         </div>
-
         <div class="question-block">
           <label>Additional Comments (Optional)</label>
           <textarea id="additionalComments" rows="3" placeholder="Write any comments here..."></textarea>
         </div>
-
         <button type="button" class="btn" onclick="showPage(2)">← Back</button>
         <button id="submitBtn" type="button" class="btn" onclick="validatePage3()">✅ Submit Feedback</button>
       </div>
@@ -182,11 +161,11 @@
     </div>
   </div>
 
-    <!-- Page 4 -->
-    <div id="page4" class="form-page">
-      <h2>🎉 Thank You!</h2>
-      <p>Your feedback has been submitted for all faculties.</p>
-    </div>
+  <!-- Page 4 -->
+  <div id="page4" class="form-page">
+    <h2>🎉 Thank You!</h2>
+    <p>Your feedback has been submitted for all faculties.</p>
+  </div>
 
   <!-- Loader -->
   <div id="loader">
@@ -195,22 +174,16 @@
 
 <script>
 const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbwFoCXaitd0DO6obxsE8s4PSEMwD_9c6Zc2c7ol-y55LoOjpH2BOtk_qMdUlLcNE9np/exec";
+const faculties = ["Sandeep Agarwal","Bhanu Dhir","Shekhar Sharma","Anju Gupta","Preeti Goel","Rohit Agarwal","Sunita Rathore"];
+let completedFaculties = [];
 
-const faculties = [
-  "Sandeep Agarwal","Bhanu Dhir","Shekhar Sharma",
-  "Anju Gupta","Preeti Goel","Rohit Agarwal","Sunita Rathore"
-];
-let completedFaculties = []; // track submitted faculties
-
-function showPage(n) {
-  document.querySelectorAll(".form-page").forEach(p => p.classList.remove("active-page"));
+function showPage(n){
+  document.querySelectorAll(".form-page").forEach(p=>p.classList.remove("active-page"));
   document.getElementById("page"+n).classList.add("active-page");
-
-  if(n === 2) loadFaculties();
-  if(n === 3) loadQuestions();
+  if(n===2) loadFaculties();
+  if(n===3) loadQuestions();
 }
 
-/* ---------- PAGE VALIDATIONS ---------- */
 function validatePage1(){
   if(!studentNameEl().value.trim() || !regNumberEl().value.trim() || !emailEl().value.trim() || !mobileEl().value.trim()){
     return alert("⚠️ Please fill all fields");
@@ -235,207 +208,98 @@ function validatePage2(){
 function validatePage3(){
   if(!batchIdEl().value.trim()){ return alert("⚠️ Batch ID is required!"); }
   const quiz = quizEl().value.trim();
-  if(!quiz || isNaN(quiz) || quiz < 0 || quiz > 100){ 
-    return alert("⚠️ Enter valid Quiz Marks (0-100)!"); 
-  }
-
-  for (let i = 0; i < 13; i++){
-    if(!document.getElementById("q"+i).value){ 
-      return alert("⚠️ Please answer all rating questions!"); 
-    }
-  }
-  for (let i = 0; i < 4; i++){
-    if(!document.getElementById("paraQ"+i).value){ 
-      return alert("⚠️ Please answer all option questions!"); 
-    }
-  }
+  if(!quiz || isNaN(quiz) || quiz < 0 || quiz > 100){ return alert("⚠️ Enter valid Quiz Marks (0-100)!"); }
+  for(let i=0;i<13;i++){ if(!document.getElementById("q"+i).value){ return alert("⚠️ Please answer all rating questions!"); } }
+  for(let i=0;i<4;i++){ if(!document.getElementById("paraQ"+i).value){ return alert("⚠️ Please answer all option questions!"); } }
   submitFeedback();
 }
 
-/* ---------- FACULTY LOADING ---------- */
 function loadFaculties(){
   const select = facultyEl();
   select.innerHTML = `<option value="">-- Select Faculty --</option>`;
-  faculties
-    .filter(f => !completedFaculties.includes(f)) // exclude submitted
-    .forEach(f => {
-      const opt = document.createElement("option");
-      opt.value = f;
-      opt.textContent = f;
-      select.appendChild(opt);
-    });
-
-  if(faculties.length === completedFaculties.length){
-    showPage(4); // thank you
-  }
+  faculties.filter(f=>!completedFaculties.includes(f)).forEach(f=>{
+    const opt = document.createElement("option"); opt.value=f; opt.textContent=f; select.appendChild(opt);
+  });
+  if(faculties.length===completedFaculties.length) showPage(4);
 }
 
-/* ---------- FEEDBACK SUBMISSION ---------- */
 function submitFeedback(){
-  // Build answers object
   const answers = {};
-  const ratingQuestions = [
-    "Attendance & Punctuality","Discipline","Active Participation",
-    "Group Activities & Teamwork","Presentation - Content","Presentation - Delivery",
-    "Communication Skills","Analytical Thinking","Creativity & Innovation",
-    "Professional Ethics Awareness","Emotional Intelligence","Overall Engagement",
-    "Professional Dress Code"
-  ];
-  ratingQuestions.forEach((q,i)=>{
-    answers[q] = document.getElementById("q"+i).value || "";
-  });
-
-  const optionQuestions = [
-    "Industry/ Practice real life examples","Accessibility for clarification",
-    "Personalised guidance","Inspiring / motivating"
-  ];
-  optionQuestions.forEach((q,i)=>{
-    answers[q] = document.getElementById("paraQ"+i).value || "";
-  });
+  for(let i=0;i<13;i++) answers[`Q${i+1}`]=document.getElementById("q"+i).value||"";
+  for(let i=0;i<4;i++) answers[`ParaQ${i+1}`]=document.getElementById("paraQ"+i).value||"";
 
   const data = {
     studentName: studentNameEl().value.trim(),
     regNumber: regNumberEl().value.trim(),
     email: emailEl().value.trim(),
     mobile: mobileEl().value.trim(),
-    faculty: facultyEl().value,   // match Apps Script
+    faculty: facultyEl().value,
     batchId: batchIdEl().value.trim(),
     quizMarks: quizEl().value.trim(),
     weightedScore: document.getElementById("weightageScore").innerText,
     grade: document.getElementById("grade").innerText,
     additionalComments: document.getElementById("additionalComments").value.trim(),
-    answers: answers
+    answers
   };
 
-  document.getElementById("loader").style.display = "flex";
+  document.getElementById("loader").style.display="flex";
 
-  fetch(SCRIPT_URL, { 
-    method: "POST", 
-    body: JSON.stringify(data),
-    headers: { "Content-Type": "application/json" }
-  })
-  .then(res => res.json())
-  .then(res => {
-    document.getElementById("loader").style.display = "none";
-    if(res.status === "success"){
-      completedFaculties.push(data.faculty);
-
-      // Reset Page 3 for next faculty
-      batchIdEl().value = "";
-      quizEl().value = "";
-      document.getElementById("additionalComments").value = "";
-      document.getElementById("questionsContainer").innerHTML = "";
-      document.getElementById("weightageScore").innerText = "0.00";
-      document.getElementById("grade").innerText = "-";
-
-      if(completedFaculties.length < faculties.length){
-        showPage(2); // select next faculty
-      } else {
-        showPage(4); // thank you
-      }
-    } else {
-      alert("❌ Submission failed: " + res.message);
-    }
-  })
-  .catch(err => {
-    document.getElementById("loader").style.display = "none";
-    alert("❌ Error submitting feedback: " + err);
-  });
+  fetch(SCRIPT_URL,{method:"POST",body:JSON.stringify(data),headers:{"Content-Type":"application/json"}})
+    .then(res=>res.json())
+    .then(res=>{
+      document.getElementById("loader").style.display="none";
+      if(res.status==="success"){
+        completedFaculties.push(data.faculty);
+        batchIdEl().value=""; quizEl().value=""; document.getElementById("additionalComments").value="";
+        document.getElementById("questionsContainer").innerHTML="";
+        document.getElementById("weightageScore").innerText="0.00";
+        document.getElementById("grade").innerText="-";
+        if(completedFaculties.length<faculties.length) showPage(2);
+        else showPage(4);
+      }else{ alert("❌ Submission failed: "+res.message); }
+    }).catch(err=>{
+      document.getElementById("loader").style.display="none";
+      alert("❌ Error submitting feedback: "+err);
+    });
 }
-/* ---------- QUESTIONS ---------- */
+
 function loadQuestions(){
-  const container = document.getElementById("questionsContainer");
-  container.innerHTML = "";
-  const ratingQuestions = [
-    "Attendance & Punctuality","Discipline","Active Participation",
-    "Group Activities & Teamwork","Presentation - Content","Presentation - Delivery",
-    "Communication Skills","Analytical Thinking","Creativity & Innovation",
-    "Professional Ethics Awareness","Emotional Intelligence","Overall Engagement",
-    "Professional Dress Code"
-  ];
-  ratingQuestions.forEach((q, i) => {
-    container.innerHTML += `<div class="question-block">
-      <label>${q} <span style="color:red">*</span></label>
-      <select id="q${i}" onchange="calculateScore()">
-        <option value="">--Select--</option>
-        <option value="20">1. POOR</option>
-        <option value="40">2. BELOW AVERAGE</option>
-        <option value="60">3. AVERAGE</option>
-        <option value="80">4. GOOD</option>
-        <option value="100">5. EXCELLENT</option>
-      </select>
-    </div>`;
+  const container=document.getElementById("questionsContainer");
+  container.innerHTML="";
+  const ratingQuestions=["Attendance & Punctuality","Discipline","Active Participation","Group Activities & Teamwork","Presentation - Content","Presentation - Delivery","Communication Skills","Analytical Thinking","Creativity & Innovation","Professional Ethics Awareness","Emotional Intelligence","Overall Engagement","Professional Dress Code"];
+  ratingQuestions.forEach((q,i)=>{
+    container.innerHTML+=`<div class="question-block"><label>${q} <span style="color:red">*</span></label><select id="q${i}" onchange="calculateScore()"><option value="">--Select--</option><option value="20">1. POOR</option><option value="40">2. BELOW AVERAGE</option><option value="60">3. AVERAGE</option><option value="80">4. GOOD</option><option value="100">5. EXCELLENT</option></select></div>`;
   });
-
-  const optionQuestions = [
-    "Industry/ Practice real life examples","Accessibility for clarification",
-    "Personalised guidance","Inspiring / motivating"
-  ];
-  optionQuestions.forEach((q, i) => {
-    container.innerHTML += `<div class="question-block">
-      <label>${q} <span style="color:red">*</span></label>
-      <select id="paraQ${i}" onchange="calculateScore()">
-        <option value="">--Select--</option>
-        <option value="20">1. POOR</option>
-        <option value="40">2. BELOW AVERAGE</option>
-        <option value="60">3. AVERAGE</option>
-        <option value="80">4. GOOD</option>
-        <option value="100">5. EXCELLENT</option>
-      </select>
-    </div>`;
+  const optionQuestions=["Industry/ Practice real life examples","Accessibility for clarification","Personalised guidance","Inspiring / motivating"];
+  optionQuestions.forEach((q,i)=>{
+    container.innerHTML+=`<div class="question-block"><label>${q} <span style="color:red">*</span></label><select id="paraQ${i}" onchange="calculateScore()"><option value="">--Select--</option><option value="20">1. POOR</option><option value="40">2. BELOW AVERAGE</option><option value="60">3. AVERAGE</option><option value="80">4. GOOD</option><option value="100">5. EXCELLENT</option></select></div>`;
   });
-
-  document.getElementById("weightageScore").innerText = "0.00";
-  document.getElementById("grade").innerText = "-";
+  document.getElementById("weightageScore").innerText="0.00";
+  document.getElementById("grade").innerText="-";
 }
 
 function calculateScore(){
-  let total = 0, count = 0;
-  for (let i = 0; i < 13; i++){
-    const val = parseInt(document.getElementById("q"+i)?.value || 0, 10);
-    if(val){ total += val; count++; }
-  }
-  for (let i = 0; i < 4; i++){
-    const valStr = document.getElementById("paraQ"+i)?.value || "";
-    let val = 0;
-    if(valStr === "Excellent") val = 100;
-    else if(valStr === "Good") val = 80;
-    else if(valStr === "Average") val = 60;
-    else if(valStr === "Poor") val = 40;
-    if(val){ total += val; count++; }
-  }
-  const avg = count > 0 ? total / count : 0;
-  const quiz = parseFloat(quizEl().value || 0);
-  const weightage = (avg + quiz) / 2;
-  document.getElementById("weightageScore").innerText = weightage.toFixed(2);
-  let grade = "C";
-  if(weightage >= 85) grade = "A+";
-  else if(weightage >= 70) grade = "A";
-  else if(weightage >= 50) grade = "B+";
-  else if(weightage >= 30) grade = "B";
-  document.getElementById("grade").innerText = grade;
+  let total=0,count=0;
+  for(let i=0;i<13;i++){ const val=parseInt(document.getElementById("q"+i)?.value||0,10); if(val){ total+=val; count++; } }
+  for(let i=0;i<4;i++){ const val=parseInt(document.getElementById("paraQ"+i)?.value||0,10); if(val){ total+=val; count++; } }
+  const avg=count>0?total/count:0;
+  const quiz=parseFloat(quizEl().value||0);
+  const weightage=(avg+quiz)/2;
+  document.getElementById("weightageScore").innerText=weightage.toFixed(2);
+  let grade="C";
+  if(weightage>=85) grade="A+"; else if(weightage>=70) grade="A"; else if(weightage>=50) grade="B+"; else if(weightage>=30) grade="B";
+  document.getElementById("grade").innerText=grade;
 }
 
-/* ---------- HELPERS ---------- */
-function collectScores(){
-  let obj = {};
-  for (let i = 0; i < 13; i++){ obj["Q"+(i+1)] = document.getElementById("q"+i).value || ""; }
-  for (let i = 0; i < 4; i++){ obj["ParaQ"+(i+1)] = document.getElementById("paraQ"+i).value || ""; }
-  return obj;
-}
+const studentNameEl=()=>document.getElementById("studentName");
+const regNumberEl=()=>document.getElementById("regNumber");
+const emailEl=()=>document.getElementById("email");
+const mobileEl=()=>document.getElementById("mobile");
+const facultyEl=()=>document.getElementById("facultySelect");
+const batchIdEl=()=>document.getElementById("batchId");
+const quizEl=()=>document.getElementById("quizMarks");
 
-const studentNameEl = ()=>document.getElementById("studentName");
-const regNumberEl = ()=>document.getElementById("regNumber");
-const emailEl = ()=>document.getElementById("email");
-const mobileEl = ()=>document.getElementById("mobile");
-const facultyEl = ()=>document.getElementById("facultySelect"); // NOTE: id="facultySelect"
-const batchIdEl = ()=>document.getElementById("batchId");
-const quizEl = ()=>document.getElementById("quizMarks");
-
-document.addEventListener("DOMContentLoaded", () => showPage(1));
+document.addEventListener("DOMContentLoaded",()=>showPage(1));
 </script>
 </body>
 </html>
-
-
-
